--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "npm": "^11.1.0"
+    "npm": "^11.1.0",
+    "stripe": "^8.174.0",
+    "ejs": "^3.1.8",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.0.14"
   }
 }
