--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@langchain/community": "^0.3.34",
+    "@langchain/core": "^0.3.42",
+    "@langchain/google-genai": "^0.1.10",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "npm": "^11.1.0"
+    "npm": "^11.1.0",
+    "pg": "^8.13.3"
   }
 }
