--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "npm": "^11.1.0",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "passport": "^0.6.0",
+    "bcrypt": "^5.0.1",
+    "stripe": "^8.174.0",
+    "mongoose": "^6.0.14"
   }
 }
